# mouse1

./: CMakeLists.txt  README.md
resources/: readme.txt
resources/data/: mouse1.pck
source/: draw.cpp  hlavni.cpp  load.cpp  menu.cpp  mouse1.cpp  mouse1.rc  move.cpp  project.h  setup.cpp
source/core/: co_core.h  co_font.cpp  co_fps.cpp  co_input.cpp  co_main.cpp  co_vid.cpp
